--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <main>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQArCpnAq9zBVu7dZy5_73NLJRo9W2SrvcMjQ&s">
-<h1>This is the most bunniest bunny</h1>
+<p>This is the most bunniest bunny</p>
 </main>
 
 
